<resources>
    <string name="app_name">Foodbook</string>
    <string name="user">user</string>
    <string name="DbName">postsv8</string>
    <string name="foodbook">foodbook</string>
    <string name="post_a_dish">Post a dish</string>
    <string name="post_new_recipe">New Recipe</string>
    <string name="post_it">Post it</string>
    <string name="upload_dish_image">Upload Dish Image</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="dish_name">Dish Name</string>
    <string name="postDetails">postDetails</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="click_here">click here</string>
    <string name="mail">Mail</string>
    <string name="sign_in1">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have account?</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="like">like</string>
    <string name="writer">Writer</string>
    <string name="date">Date</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="new_post">New Post</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="post_info">Post Info</string>
    <string name="writer_name">Writer Name</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="search_something">Search Something...</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="click_on_dish">Click on dish</string>
    <string name="click_to_edit">Click to edit</string>
    <string name="top_10">TOP 10</string>
    <string name="welcome_to_foodbook">Welcome To FoodBook!</string>
    <string name="this_is_where_you_can_search_for_recipes_and_share_your_own">This is where you can search for recipes and share your own</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="home_instruction">On the home page you can see all the recipes published by the app participants</string>
    <string name="profile_instruction">On your profile page you can see the recipes you posted yourself</string>
    <string name="search_instruction">On the search page you can search for specific users or recipes</string>
    <string name="top10_instruction">You can also see the TOP 10 recipes that have won the most likes</string>
    <string name="let_s_start">let\'s start</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="incorrect">email or password are incorrect</string>
    <string name="Email_not_valid">Email not valid</string>
    <string name="Password_not_valid">Password not valid</string>
    <string name="Name_not_valid">Name not valid</string>
    <string name="Image_not_valid">Image not valid</string>
    <string name="User_created_successfully">User created successfully</string>
    <string name="Fail_to_save_picture">Fail to save picture</string>
    <string name="Fail_to_create_account">Fail to create account</string>
    <string name="Photo_uploaded_successfully">Photo uploaded successfully</string>
    <string name="Dish_name_not_valid">Dish name not valid</string>
    <string name="Recipe_not_valid">Recipe not valid</string>
    <string name="Ingredients_not_valid">Ingredients not valid</string>
    <string name="Post_uploaded_successfully">Post uploaded successfully</string>


</resources>