<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/new_post"
        android:enabled="true"
        android:icon="@drawable/ic_new_post"
        android:title="@string/new_post"/>
    <item
        android:id="@+id/log_out"
        android:enabled="true"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out"/>
</menu>