<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="@string/settings"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/DarkModeSwitch"
            android:layout_width="186dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/abeezee"
            android:text="Dark Mode" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/apply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:backgroundTint="#3F51B5"
                android:fontFamily="@font/abeezee"
                android:text="@string/apply"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/cancel_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="236dp"
                android:backgroundTint="#878787"
                android:fontFamily="@font/abeezee"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>