<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00BCD4"
    tools:context=".activities.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/topPage"
            android:layout_width="match_parent"
            android:layout_height="224dp">

            <TextView
                android:id="@+id/sign_in_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="138dp"
                android:layout_marginEnd="110dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/sign_in1"
                android:textAlignment="center"
                android:textSize="48sp"
                app:lineHeight="34sp" />

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="192dp"
                android:layout_height="105dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="198dp"
                app:srcCompat="@drawable/foodbook" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/middlePage"
            android:layout_width="wrap_content"
            android:layout_height="244dp"
            android:layout_below="@id/topPage"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etMail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="57dp"
                android:layout_marginLeft="57dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="58dp"
                android:fontFamily="@font/abeezee"
                android:gravity="top"
                android:hint="@string/email"
                android:textSize="15sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMail"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="56dp"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="58dp"
                android:fontFamily="@font/abeezee"
                android:gravity="top"
                android:hint="@string/password"
                android:textSize="15sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/abeezee" />

            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/endPage"
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_below="@id/middlePage"
            android:layout_marginTop="-31dp">

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="186dp"
                android:layout_height="61dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="179dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="46dp"
                android:backgroundTint="#3F51B5"
                android:fontFamily="@font/abeezee"
                android:text="@string/sign_in"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/don_t_have_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="53dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/don_t_have_account_yet"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goto_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="93dp"
                android:clickable="true"
                android:fontFamily="@font/abeezee"
                android:text="@string/register"
                android:textColor="#3F51B5"
                android:textSize="20sp" />


        </RelativeLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


