<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="45dp"
    tools:context=".fragments.NewPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/topPage"
                android:layout_width="match_parent"
                android:layout_height="86dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="306dp"
                    android:layout_height="57dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="54dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/post_new_recipe"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:lineHeight="34sp" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/fields"
                android:layout_width="409dp"
                android:layout_height="372dp"
                android:layout_below="@id/topPage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etDishName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/dish_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:fontFamily="@font/abeezee" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etIngredients"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/ingredients">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:fontFamily="@font/abeezee"
                        android:gravity="start|top"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etRecipe"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/recipe">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="113dp"
                        android:fontFamily="@font/abeezee"
                        android:gravity="start|top"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="170dp"
                        android:layout_height="33dp"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/abeezee"
                        android:text="@string/upload_dish_image"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivUploadDishPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="33dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="21dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@android:drawable/ic_menu_upload" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <Button
                android:id="@+id/post_btn"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="26dp"
                android:backgroundTint="#3F51B5"
                android:fontFamily="@font/abeezee"
                android:text="@string/post_it"
                android:textSize="16sp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>