<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="45dp"
    tools:context=".fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_search"
                android:layout_width="306dp"
                android:layout_height="57dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:fontFamily="@font/abeezee"
                android:gravity="center"
                android:hint="@string/search_something"
                android:layout_marginLeft="30dp"
                android:textAlignment="center"
                android:textSize="40sp"
                app:lineHeight="34sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="14dp"
                android:backgroundTint="#3F51B5"
                android:fontFamily="@font/abeezee"
                android:foregroundGravity="center"
                android:src="@drawable/ic_search"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/users_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/users"
            android:textSize="20sp"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_results"
            android:layout_width="match_parent"
            android:layout_height="99dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/posts_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/posts"
            android:textSize="20sp"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_post_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</FrameLayout>